name:           ski-tracker
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple

executable ski-tracker
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   xml,
                   bytestring,
                   time,
                   old-locale,
                   converge,
                   download-curl,
                   mtl
  ghc-options:     -Wall

test-suite TestMain
  type:            exitcode-stdio-1.0
  x-uses-tf:       true
  build-depends:   
                   base >= 4,
                   HUnit >= 1.2 && < 2,
                   QuickCheck >= 2.4,
                   test-framework >= 0.4.1,
                   test-framework-quickcheck2,
                   test-framework-hunit
  hs-source-dirs:  
                   tests,
                   src
  ghc-options:     -Wall -rtsopts
  main-is:         Main.hs

