name:           ski-tracker
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple

executable skiserver
  hs-source-dirs:  appserver,
                   src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   xml,
                   bytestring,
                   time,
                   old-locale,
                   converge,
                   mtl,
                   happstack-lite,
                   blaze-html,
                   blaze-markup,
                   text,
                   transformers,
                   cryptohash,
                   directory
  ghc-options:     -Wall -rtsopts -O2

executable trackutil
  hs-source-dirs:  
                   trackutil,
                   src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   blaze-html,
                   blaze-markup,
                   bytestring,
                   converge,
                   old-locale,
                   time,
                   xml
  ghc-options:     -Wall -rtsopts -O2

test-suite TestMain
  type:            exitcode-stdio-1.0
  x-uses-tf:       true
  build-depends:   
                   base >= 4,
                   HUnit >= 1.2 && < 2,
                   QuickCheck >= 2.4,
                   test-framework >= 0.4.1,
                   test-framework-quickcheck2,
                   test-framework-hunit
  hs-source-dirs:  
                   tests,
                   src
  ghc-options:     -Wall -rtsopts
  main-is:         Main.hs

