name:           ski-tracker
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple

executable skiserver
  hs-source-dirs:  appserver,
                   src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   blaze-html,
                   blaze-markup,
                   bytestring,
                   containers,
                   converge,
                   cryptohash,
                   directory,
                   happstack-server,
                   mtl,
                   old-locale,
                   text,
                   time,
                   transformers,
                   unix,
                   xml
  ghc-options:     -Wall -rtsopts -O2

executable trackutil
  hs-source-dirs:  
                   trackutil,
                   src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   blaze-html,
                   blaze-markup,
                   bytestring,
                   converge,
                   old-locale,
                   time,
                   xml
  ghc-options:     -Wall -rtsopts -O2

test-suite TestMain
  type:            exitcode-stdio-1.0
  x-uses-tf:       true
  build-depends:   
                   base >= 4,
                   HUnit >= 1.2 && < 2,
                   QuickCheck >= 2.4,
                   random,
                   test-framework >= 0.4.1,
                   test-framework-quickcheck2,
                   test-framework-hunit
  hs-source-dirs:  
                   tests,
                   src
  ghc-options:     -Wall -rtsopts
  main-is:         Main.hs

